[tool.poetry]
name = "sentry-profiler"
version = "0.1.0"
description = ""
authors = ["Soof Golan <soofgolan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
fastapi = "^0.103.1"
sentry-sdk = {extras = ["fastapi"], version = "^1.31.0"}
uvicorn = {extras = ["standard"], version = "^0.23.2"}
httpx = "^0.25.0"
typer = {extras = ["all"], version = "^0.9.0"}
tqdm = "^4.66.1"
python-dotenv = {extras = ["cli"], version = "^1.0.0"}
numpy = "^1.26.0"
orjson = "^3.9.7"


[tool.poetry.group.dev.dependencies]
black = "^23.9.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
